--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  network_info_plus: ^6.0.1
+  permission_handler: ^11.3.1 # dependency
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   characters: ^1.3.0
