--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>NSSpeechRecognitionUsageDescription</key>
+		<string>This application uses speech recognition to convert your speech to text</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>This application needs to access your microphone to record audio for speech recognition</string>
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
 		<key>CFBundleDevelopmentRegion</key>
